--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "svelte-lib",
+	"name": "svelter-search-ui",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -25,14 +25,13 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/package": "^2.0.0",
+		"@sveltejs/package": "^2.3.5",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"publint": "^0.2.0",
 		"svelte": "^4.2.7",
 		"typescript": "^5.3.2",
 		"vite": "^5.0.11"
 	},
-	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module"
 }
